Updated to CR1 and running with disabled security policy.